# qwallet

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: ci.yml  linux.yml  windows.yml
include/: utility.hpp  wallet.hpp
include/core/: common_types.h  four_q.h  kangaroo_twelve.h  m256.h  memory.h
include/fonts/: raleway.hpp
include/gui/: airdrop_window.hpp  dpi.hpp  qwallet.hpp  wallet_window.hpp  window.hpp
include/network/: airdrop.hpp  connection.hpp  entity.hpp  tick.hpp  transactions.hpp
include/network_messages/: README.md  all.h  assets.h  broadcast_message.h  common_def.h  common_response.h  computors.h  contract.h  entity.h  header.h  public_peers.h  special_command.h  system_info.h  tick.h  transactions.h
src/: main.cpp  utility.cpp  wallet.cpp
src/gui/: airdrop_window.cpp  dpi.cpp  qwallet.cpp  wallet_window.cpp  window.cpp
src/network/: airdrop.cpp  connection.cpp  entity.cpp  tick.cpp  transactions.cpp
test/: test_client.cpp  test_qubic_client.cpp  test_server.cpp  test_utility.cpp  test_wallet.cpp
tools/: qairdrop.cpp
